stryker/Metadata/unpackaged/objects/Placements__c.object
<CustomObject>
    <fields>
        <fullName>HR_name__c</fullName>
        <label>HR name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_no__c</fullName>
        <displayFormat>s-{000}</displayFormat>
        <label>S.no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>c++</fullName>
                </value>
                <value>
                    <fullName>java</fullName>
                </value>
                <value>
                    <fullName>python</fullName>
                </value>
                <value>
                    <fullName>salesforce</fullName>
                </value>
                <value>
                    <fullName>sap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>citys__c</fullName>
        <label>citys</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Noida</fullName>
                </value>
                <value>
                    <fullName>pune</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>company_name__c</fullName>
        <label>company name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Placements</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>p-{000}</displayFormat>
        <label>Placements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>